# odds-scraper

./: .coderabbit.yaml  .editorconfig  .gitignore  .gitleaksignore  .pr_agent.toml  .sourcery.yaml  AGENTS.md  CONTRIBUTING.md  CUsersnicolasAppDataLocalTemppr_diff.txt  Makefile  README-ci-ux-kit.md  README.md  SECURITY.md  config.json  example_usage.py  live_example.py  pyproject.toml  pyrightconfig.json  requirement.txt
.claude/: launch.json
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  dependency-review-config.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  compatibility.yml  labeler.yml  release.yml  security-weekly.yml  security.yml
data/: live_odds_all_sources.csv  nba_standings_2025_26.csv  odds_comparison_results.csv  sample_odds_data.csv
docs/: CI.md
fixtures/: draftkings_nba.html  espn_scoreboard_api.json
gui/: main.py
gui/pages/: ev_calc.py  home.py  live_odds.py
logs/: odds-scraper_2026-05-04.jsonl  odds-scraper_2026-05-05.jsonl
models/: ev_calculator.py
odds_scraping/: config.py  draftkings_scraper.py  espn_scraper.py  http_client.py  live_odds_scraper.py  odds_comparison.py  odds_scraper.py  parsers.py
reference/: research.txt
src/backend/: __init__.py  logging_config.py
src/backend/data/: __init__.py  nba_dataset.py
src/backend/enrichment/: __init__.py  cache.py  probability.py  team_stats.py
src/backend/fixtures/: dk-game-lines.html  espn_header_api.json
src/backend/models/: domain.py  ev_calculator.py  odds_enrichment.py
src/backend/odds_scraping/: config.py  draftkings_scraper.py  espn_scraper.py  live_odds_scraper.py  odds_comparison.py  odds_scraper.py  parsers.py
src/backend/scrapers/: __init__.py  base.py  comparison.py  orchestrator.py  sample.py
src/backend/scrapers/draftkings/: __init__.py  config.py  scraper.py
src/backend/scrapers/espn/: __init__.py  config.py  scraper.py
src/backend/scrapers/shared/: __init__.py  http_client.py  parsers.py
src/frontend/: __init__.py
src/frontend/gui/: main.py
src/frontend/gui/pages/: ev_calc.py  home.py  live_odds.py
tests/: browser_fakes.py  conftest.py  selenium_fakes.py  test_domain.py  test_enrichment.py  test_ev_calculator.py  test_http_client.py  test_live_odds_page.py  test_live_odds_scraper.py  test_logging.py  test_nba_dataset.py  test_odds_comparison.py  test_odds_scraper.py
