[project]
name = "odds-scraper"
version = "0.2.0"
description = "NBA odds scraper & Expected Value calculator with multi-sportsbook comparison"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Nicolas" }
]
keywords = ["nba", "odds", "scraping", "sports-betting", "expected-value"]

dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "selenium>=4.15",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "courlan>=1.3.2",
    "fake-useragent>=2.2.0",
    "curl-cffi>=0.15.0",
    "orjson>=3.11.8",
    "parsel>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
    "ty>=0.0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "__pycache__", "*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert in tests
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S311"]
"example_usage.py" = ["T201"]  # allow print in demos
"live_example.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["odds_scraping", "models"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
invalid-argument-type = "warn"
possibly-missing-attribute = "warn"
missing-argument = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
division-by-zero = "warn"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.src]
include = ["odds_scraping", "models", "example_usage.py", "live_example.py"]
exclude = []

[[tool.ty.overrides]]
include = ["odds_scraping/live_odds_scraper.py"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
possibly-unresolved-reference = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odds_scraping", "models"]
