[project]
name = "odds-scraper"
version = "0.2.0"
description = "NBA odds scraper & Expected Value calculator with multi-sportsbook comparison"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Nicolas" }
]
keywords = ["nba", "odds", "scraping", "sports-betting", "expected-value"]

dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "courlan>=1.3.2",
    "fake-useragent>=2.2.0",
    "curl-cffi>=0.15.0",
    "orjson>=3.11.8",
    "parsel>=1.11.0",
    "nicegui>=2.0",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.11",
    "ty>=0.0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "__pycache__", "*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # allow assert in tests
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--tb=short", "-q", "--cov=src"]

[tool.pyright]
extraPaths = ["src"]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
invalid-argument-type = "warn"
possibly-missing-attribute = "warn"
missing-argument = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
division-by-zero = "warn"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.src]
include = ["src/backend", "src/frontend"]
exclude = []

[[tool.ty.overrides]]
include = ["src/backend/odds_scraping/live_odds_scraper.py"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
possibly-unresolved-reference = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/frontend"]

[tool.coverage.run]
source = ["src/backend", "src/frontend"]
relative_files = true
omit = ["tests/*", "*/conftest.py", "*/__pycache__/*", "src/frontend/gui/*"]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
    '@(abc\\.)?abstractmethod',
]
fail_under = 80
